--- a/ui.frontend/src/main/webpack/components/_hero.scss
+++ b/ui.frontend/src/main/webpack/components/_hero.scss
@@ -1,23 +1,78 @@
-.hot-recipe-hero{
+.hot-recipe-hero {
     display: flex;
-    width: 1280px;
+    width: auto;
     height: 640px;
     left: 80px;
     top: 150px;
-}
 
-.hot-recipe-hero__info{
-width: 50%;
-height: 100%;
+    &__info {
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: left;
+        width: 50%;
+        height: 100%;        
+    }
+    &__user{
+        display: flex;
+        flex-direction: row;
+    }
+
+    &__image {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       width: 100vw;
+    }
+    &__image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    &__text-text {
+        word-break: break-all;
+        white-space: normal;
+    }
+    &__user-and-view-recipes {
+        justify-content: center;
+        display: flex;
+        padding: 0 40px;
+    }
+    &__user-info {
+        display: flex;
+        padding-left: 20px;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    &__view-recipes {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 200px;
+        height: 60px;
+        left: 450px;
+        top: 680px;
+        background: #000000;
+        border-radius: 16px;
+
+    }
+
+    &__view-recipes-button-text {
+        width: 88px;
+        height: 17px;
+        left: 487px;
+        top: 701px;
     
-}
-.hot-recipe-hero__image{
-    width: 50%;
-    height: 100%;
-   
-}
-.hot-recipe-hero__text-text, .hot-recipe-hero__text{
-margin-right: 100px;
-padding: 10px;
-color: rgba(0, 0, 0, 0.6)
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 17px;
+        
+        letter-spacing: -0.02em;
+    
+        color: #FFFFFF;
+    }
 }
