--- a/ui.frontend/src/main/webpack/components/_hero.scss
+++ b/ui.frontend/src/main/webpack/components/_hero.scss
@@ -1,6 +1,6 @@
 .hot-recipe-hero {
     display: flex;
-    width: auto;
+    width: 1280px;
     height: 640px;
     left: 80px;
     top: 150px;
@@ -11,8 +11,8 @@
         flex-direction: column;
         align-items: center;
         justify-content: left;
-        width: 50%;
-        height: 100%;        
+        width: 620px;
+        height:640px;        
     }
     &__user{
         display: flex;
@@ -23,7 +23,8 @@
        display: flex;
        justify-content: center;
        align-items: center;
-       width: 100vw;
+       width: 660px;
+       height: 640px;
     }
     &__image img {
         width: 100%;
