--- a/ui.frontend/src/main/webpack/components/_singleCategory.scss
+++ b/ui.frontend/src/main/webpack/components/_singleCategory.scss
@@ -1,8 +1,13 @@
 .single-category{
+    width: 180px;
+    height: 202px;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     text-justify: center;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
+    border-radius: 30px;
 }
