--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/singleRecipe/singleRecipe.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/singleRecipe/singleRecipe.html
@@ -1,17 +1,15 @@
 <div class="single-recipe"
 data-sly-use.model="com.adobe.aem.guides.foodieland.core.models.SingleRecipeComponent">
 
-    <div class="single-recipe__image">
-        <img class="single-recipe__image-img" 
+    <div class="single-recipe_image">
+        <p>${properties.singleRecipeImageReference}</p>
+        <img class="hot-recipe-hero__user-image" 
+                    data-cmp-hook-singleRecipeComponent="model"
                      style=" width: 100px; height: 100px; left: 50px; top: 50px;"
                      src="${model.singleRecipeImageReference}" 
-                     alt="">
+                     alt=""/>
     </div>
-    <div class="single-recipe__info">
-        <h4> ${model.singleRecipeName} </h4>
-        <div class="single-recipe__info-text">
-            <p>${model.singleRecipePrepareTime}</p>
-            <p>${model.singleRecipeMainIngredient}</p>
-        </div>
+    <div class="single-category_text">
+        <h4> ${model.nameRecipe} </h4>
     </div> 
 </div>
