ads component/ learn-more component

--- a/ui.apps/src/main/content/jcr_root/apps/foodieland/components/allCategories/allCategories.html
+++ b/ui.apps/src/main/content/jcr_root/apps/foodieland/components/allCategories/allCategories.html
@@ -19,7 +19,8 @@
             </div>
     </div>
 
-    <div class="all-categories__categories-row">
+    <div class="all-categories__categories-row" 
+    style="display: flex; align-items: center; justify-content: space-between;width: auto; height: auto;">
         <sly class="all-categories__categories-row-item" 
             data-sly-resource="${'nome do componente' @ resourceType='wcm/foundation/components/parsys'}"></sly>
     </div>
