--- a/ui.frontend/src/main/webpack/components/_teaser.scss
+++ b/ui.frontend/src/main/webpack/components/_teaser.scss
@@ -1,4 +1,11 @@
-.cmp-teaser {}
+.cmp-teaser {
+    display: flex;
+    width: 22px;
+    height: 22px;
+    align-content: center;
+    justify-content: center;
+    padding-right: 20px;
+}
 .cmp-teaser__image {}
 .cmp-teaser__content {}
 .cmp-teaser__pretitle {}
